fixtures/positive/quotechar_structure.inc
---
title = Quote character data
[structure]
quotechar = "'"
---
name,note
Ada,'hello, world'
