fixtures/negative/invalid_structure_char.inc
---
title = Invalid structure char
[structure]
delim = comma
---
name,score
Ada,21
